<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Sign in"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameEt"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordReg" />

    <EditText
        android:id="@+id/inputUsernameReg"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:hint="@string/username"

        android:textColorHint="#85000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/inputPasswordReg"
        android:layout_width="321dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"

        android:textColorHint="#74000000"
        app:layout_constraintEnd_toEndOf="@+id/inputUsernameReg"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/inputUsernameReg"
        app:layout_constraintTop_toBottomOf="@+id/inputUsernameReg" />

    <EditText
        android:id="@+id/phoneEt"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/lastNameEt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastNameEt"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEt" />

    <EditText
        android:id="@+id/countryEt"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/phoneEt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phoneEt"
        app:layout_constraintTop_toBottomOf="@+id/phoneEt" />

    <EditText
        android:id="@+id/lastNameEt"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/firstNameEt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstNameEt"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEt" />

    <Button
        android:id="@+id/btnSignUpServer"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="sign up"
        android:textColor="#C0C0C0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryEt" />


</androidx.constraintlayout.widget.ConstraintLayout>